--- a/Web/SwingDataViewer/Views/Home/Index.cshtml
+++ b/Web/SwingDataViewer/Views/Home/Index.cshtml
@@ -237,7 +237,7 @@
                             {
                                 <tr>
                                     <th scope="row">@(i + 1)</th>
-                                    <td @(Model.LastMonth.MinHeadSpeed[i].User.Unknown ? "class=unknown":"")>>@Model.LastMonth.MinHeadSpeed[i].User.Name</td>
+                                    <td @(Model.LastMonth.MinHeadSpeed[i].User.Unknown ? "class=unknown":"")>@Model.LastMonth.MinHeadSpeed[i].User.Name</td>
                                     <td>@Model.LastMonth.MinHeadSpeed[i].Value m/s</td>
                                 </tr>
                             }
